fixed issues with overlapping text / image sizing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 li {
     text-align: left;
 }.front {
@@ -7,16 +6,11 @@ li {
     text-shadow: 0px 0px 5px #888888;
     font-size: 60px;
     text-align: center;
-    line-height: 10px;
 }
 .center {
     display: block;
     margin: 0 auto;
     box-shadow: 0px 0px 25px #cccccc;
-    width: 60%;
-}
-.steak {
-    width: 50%
 }
 .note {
     font-family: Arial, Helvetica, sans-serif;
